--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+
+	<h1>Time, Space, Complexity</h1>
+	<p>The time complexity of an algorithm quantifies the amount of time taken by an algorithm to run as a function of the length of the input.</p>
+	<p>The space complexity of an algorithm quantifies the amount of space taken by an algorithm to run as a function of the length of the input. For example, <b>Space Complexity</b> can be expressed as O(n), where 'n' is the size of the input data.</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
