--- a/main.html
+++ b/main.html
@@ -7,10 +7,18 @@
 </head>
 
 <body>
+	  <h1>Time, Space, and Complexity</h1>
 
-	<h1>Time, Space, Complexity</h1>
-	<p>The time complexity of an algorithm quantifies the amount of time taken by an algorithm to run as a function of the length of the input.</p>
-	<p>The space complexity of an algorithm quantifies the amount of space taken by an algorithm to run as a function of the length of the input. For example, <b>Space Complexity</b> can be expressed as O(n), where 'n' is the size of the input data.</p>
+    <p>Time complexity refers to how the runtime of an algorithm grows 
+		as the size of the input increases. It measures the efficiency of 
+		an algorithm in terms of execution time. Efficient algorithms strive 
+		to minimize the time complexity to handle larger datasets quickly.</p>
+
+    <p>Space Complexity, on the other hand, measures the amount of memory an 
+		algorithm consumes relative to the size of the input. It considers 
+		auxiliary space used in addition to the input data. 
+		For example, <b>Space Complexity</b> 
+		can be expressed as O(n), where 'n' is the size of the input data.</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
