--- a/main.html
+++ b/main.html
@@ -9,16 +9,9 @@
 <body>
 	  <h1>Time, Space, and Complexity</h1>
 
-    <p>Time complexity refers to how the runtime of an algorithm grows 
-		as the size of the input increases. It measures the efficiency of 
-		an algorithm in terms of execution time. Efficient algorithms strive 
-		to minimize the time complexity to handle larger datasets quickly.</p>
+    <p>Time complexity is a measure of how the runtime of an algorithm increases as the size of the input grows. It helps evaluate the efficiency of algorithms by determining the amount of time they take to complete tasks. Designing efficient algorithms with optimal time complexity is crucial for handling large datasets effectively.</p>
 
-    <p>Space Complexity, on the other hand, measures the amount of memory an 
-		algorithm consumes relative to the size of the input. It considers 
-		auxiliary space used in addition to the input data. 
-		For example, <b>Space Complexity</b> 
-		can be expressed as O(n), where 'n' is the size of the input data.</p>
+    <p><b>Space Complexity</b> refers to the amount of memory an algorithm uses, including the input data and any additional space required during execution. It helps assess how efficiently an algorithm utilizes memory resources. For example, Space Complexity can often be represented as O(n), where 'n' denotes the size of the input.</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
